<resources>
    <string name="app_name">Kino</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="exit">Exit</string>
    <string name="version">Version</string>
    <string name="version_number" translatable="false">0.0.4</string>
    <string name="about_text">An app for booking and tracking movie theatre reservations</string>
    <string name="movie_theatre">Movie theatre</string>
    <string name="add_viewing">Add Viewing</string>
    <string name="date">Date</string>
    <string name="movie">Movie</string>
    <string name="price">Price</string>
    <string name="hall">Hall</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="rating">Rating</string>
    <string name="return_button">Return button</string>
    <string name="movies_log">Movies (%1$d)</string>
    <string name="cannot_start_activity_log" translatable="false">Cannot start activity AddViewingActivity without halls</string>
    <string name="user_id">User ID</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="open_movies_overview">Open movies overview</string>
    <string name="movies">Movies</string>
    <string name="rated_movie_out_of_ten" translatable="false">%1$d/10</string>
</resources>