<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dOne"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHoriz" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/movie_theatre"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHoriz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sala_de_cine" />

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dOne"
        android:layout_marginEnd="@dimen/dQuart"
        android:text="@string/version"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVert"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppName" />

    <TextView
        android:id="@+id/textViewVersionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dQuart"
        android:text="@string/version_number"
        app:layout_constraintStart_toStartOf="@+id/guidelineVert"
        app:layout_constraintTop_toTopOf="@+id/textViewVersion" />

    <TextView
        android:id="@+id/textViewAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dOne"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVersion" />

    <TextView
        android:id="@+id/textViewAboutText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="@dimen/dOne"
        android:layout_marginTop="@dimen/dHalf"
        android:layout_marginEnd="@dimen/dOne"
        android:text="@string/about_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAbout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHoriz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ImageButton
        android:id="@+id/imageButtonReturn"
        android:layout_width="@dimen/dSevenQuarters"
        android:layout_height="@dimen/dSevenQuarters"
        android:layout_marginTop="@dimen/dOne"
        android:layout_marginStart="@dimen/dOne"
        android:contentDescription="@string/return_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/round_primary"
        app:tint="@color/md_theme_onPrimary"
        app:srcCompat="@drawable/chevron_backward_24px" />

    <TextView
        android:id="@+id/textViewUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dOne"
        android:layout_marginTop="@dimen/dOne"
        android:layout_marginEnd="@dimen/dOne"
        android:text="@string/user_id"
        app:layout_constraintEnd_toStartOf="@+id/textViewUserIDValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAboutText" />

    <TextView
        android:id="@+id/textViewUserIDValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dOne"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewUserID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewUserID" />
</androidx.constraintlayout.widget.ConstraintLayout>