<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/buttonInfo"
        android:contentDescription="@string/info"
        android:src="@drawable/info_24px"
        android:layout_width="@dimen/dSevenQuarters"
        android:layout_height="@dimen/dSevenQuarters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonAbout"
        android:background="@drawable/round_primary"
        android:layout_marginBottom="@dimen/dOne"
        app:tint="@color/md_theme_onPrimary" />

    <Button
        android:id="@+id/buttonAbout"
        android:text="@string/about"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dSevenQuarters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonAddMovie"
        android:layout_marginBottom="@dimen/dOne"/>

    <ImageButton
        android:id="@+id/buttonAddMovie"
        android:contentDescription="@string/add_viewing"
        android:src="@drawable/add_24px"
        android:layout_width="@dimen/dSevenQuarters"
        android:layout_height="@dimen/dSevenQuarters"
        android:background="@drawable/round_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dOne"
        app:tint="@color/md_theme_onPrimary" />

    <Button
        android:id="@+id/buttonExit"
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dSevenQuarters"
        android:fontFamily="@font/playwriteno_variablefont_wght"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/dOne"
        android:layout_marginTop="@dimen/dOne"/>
</androidx.constraintlayout.widget.ConstraintLayout>