<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMovieActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dSevenQuarters"
        android:layout_marginTop="@dimen/dOne"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberRating" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dSevenQuarters"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonAdd" />

    <TextView
        android:labelFor="@+id/editTextMovieName"
        android:id="@+id/textViewMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dHalf"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextMovieName"
        app:layout_constraintEnd_toStartOf="@+id/guideline" />

    <TextView
        android:labelFor="@+id/editTextNumberRating"
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dHalf"
        android:text="@string/rating"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberRating"
        app:layout_constraintEnd_toStartOf="@+id/guideline" />

    <EditText
        android:id="@+id/editTextMovieName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dOne"
        android:layout_marginTop="@dimen/dOne"
        android:layout_marginEnd="@dimen/dOne"
        android:autofillHints="Indiana Jones Raiders of the Lost Ark"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumberRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dOne"
        android:layout_marginTop="@dimen/dOne"
        android:layout_marginEnd="@dimen/dOne"
        android:autofillHints="7"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editTextMovieName" />

</androidx.constraintlayout.widget.ConstraintLayout>